--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,6 @@
-appnope==0.1.2
-backcall==0.2.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-cached-property==1.5.2
-certifi==2019.11.28
-chardet==3.0.4
-commonmark==0.9.1
-decorator==5.0.9
-dictdiffer==0.8.1
-idna==2.8
-ipython==7.16.1
-ipython-genutils==0.2.0
-jedi==0.18.0
-notion==0.0.28
-numpy==1.19.5
-pandas==1.1.5
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.19
-ptyprocess==0.7.0
-Pygments==2.9.0
-python-dateutil==2.8.1
-python-slugify==5.0.2
-pytz==2021.1
+certifi==2021.5.30
+charset-normalizer==2.0.4
+idna==3.2
 PyYAML==5.4.1
-requests==2.22.0
-six==1.16.0
-soupsieve==2.2.1
-text-unidecode==1.3
-toml==0.10.2
-traitlets==4.3.3
-tzlocal==2.1
-urllib3==1.25.7
-wcwidth==0.2.5
+requests==2.26.0
+urllib3==1.26.6
